[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["nick <gonzo.nick123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
qwlist = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
